@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.9.1-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-01 22:22:41, took 00:20:16, with 50 workers, on 4038 cases, 1 failed, 0 traces, 8 retries
+-;-;-;2025-09-01 22:59:26, took 00:13:55, with 50 workers, on 4038 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1061,7 +1061,7 @@ http://sources.freertr.org/cfg/crypt-tls07.tst;crypt-tls07.tst;success;tls with 
 http://sources.freertr.org/cfg/crypt-tls08.tst;crypt-tls08.tst;success;tls with ecdsa
 http://sources.freertr.org/cfg/crypt-tls09.tst;crypt-tls09.tst;success;tls with mldsa
 http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;success;wireguard over ipv4
-http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;#6-run-r1 tping 100 10 2.2.2.2 vrf v1;wireguard over ipv6
+http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
 http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
 http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
