@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.9.1-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-01 22:35:49, took 00:12:37, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-09-01 23:11:48, took 00:11:52, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
